--- a/helm/jupyter-home-nfs/values.yaml
+++ b/helm/jupyter-home-nfs/values.yaml
@@ -7,6 +7,7 @@ quotaEnforcer:
   image:
     repository: ghcr.io/sunu/get-quota-your-home
     tag: 0.0.2
+  path: "/export"
   # quota in GB
   hardQuota: "10"
 
