--- a/helm/jupyter-home-nfs/templates/service.yaml
+++ b/helm/jupyter-home-nfs/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Release.Name }}-service
+  name: {{ .Release.Name }}-nfs-service
 spec:
   type: {{ .Values.service.type }}
   ports:
