--- a/helm/jupyterhub-home-nfs/Chart.yaml
+++ b/helm/jupyterhub-home-nfs/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: jupyter-home-nfs
+name: jupyterhub-home-nfs
 description: A Helm chart for an in-cluster NFS server with storage quota enforcement
 version: 0.0.5
 appVersion: "0.0.5"
