--- a/helm/jupyterhub-home-nfs/values.yaml
+++ b/helm/jupyterhub-home-nfs/values.yaml
@@ -5,6 +5,12 @@ nfsServer:
   image:
     repository: ghcr.io/2i2c-org/nfs-ganesha
     tag: 0.0.7
+  cpu:
+    request:
+    limit:
+  memory:
+    request:
+    limit:
 
 # Quota enforcer configuration
 # This container enforces the quota on the home directories
@@ -16,6 +22,12 @@ quotaEnforcer:
   path: "/export"
   # quota in GB
   hardQuota: "10"
+  cpu:
+    request:
+    limit:
+  memory:
+    request:
+    limit:
 
 # Prometheus exporter configuration
 # We export disk usage metrics using the Prometheus node exporter
@@ -25,6 +37,12 @@ prometheusExporter:
   image:
     repository: quay.io/prometheus/node-exporter
     tag: v1.8.2
+  cpu:
+    request:
+    limit:
+  memory:
+    request:
+    limit:
 
 # Persistent volume configuration
 
