Use toJson function to define the entire resources block in one go

--- a/helm/jupyterhub-home-nfs/templates/deployment.yaml
+++ b/helm/jupyterhub-home-nfs/templates/deployment.yaml
@@ -36,13 +36,7 @@ spec:
         volumeMounts:
         - name: home-directories
           mountPath: /export
-        resources:
-          requests:
-            cpu: {{ .Values.nfsServer.cpu.request | default null }}
-            memory: {{ .Values.nfsServer.memory.request | default null }}
-          limits:
-            cpu: {{ .Values.nfsServer.cpu.limit | default null }}
-            memory: {{ .Values.nfsServer.memory.limit | default null }}
+        resources: {{ toJson .Values.nfsServer.resources }}
       - name: enforce-xfs-quota
         image: "{{ .Values.quotaEnforcer.image.repository }}:{{ .Values.quotaEnforcer.image.tag }}"
         command: ["/usr/local/bin/generate.py", "{{ .Values.quotaEnforcer.path }}", "--hard-quota", "{{ .Values.quotaEnforcer.hardQuota }}"]
@@ -52,12 +46,7 @@ spec:
         - name: home-directories
           mountPath: /export
         resources:
-          requests:
-            cpu: {{ .Values.quotaEnforcer.cpu.request | default null }}
-            memory: {{ .Values.quotaEnforcer.memory.request | default null }}
-          limits:
-            cpu: {{ .Values.quotaEnforcer.cpu.limit | default null }}
-            memory: {{ .Values.quotaEnforcer.memory.limit | default null }}
+          requests: {{ toJson .Values.quotaEnforcer.resources }}
       {{- if .Values.prometheusExporter.enabled }}
       - name: metrics-exporter
         image: "{{ .Values.prometheusExporter.image.repository }}:{{ .Values.prometheusExporter.image.tag }}"
@@ -75,13 +64,7 @@ spec:
           # Mounting under /shared-volume to match path in dashboard definition in jupyterhub/grafana-dashboards
           mountPath: /shared-volume
           readOnly: true
-        resources:
-          requests:
-            cpu: {{ .Values.prometheusExporter.cpu.request | default null }}
-            memory: {{ .Values.prometheusExporter.memory.request | default null }}
-          limits:
-            cpu: {{ .Values.prometheusExporter.cpu.limit | default null }}
-            memory: {{ .Values.prometheusExporter.memory.limit | default null }}
+        resources: {{ toJson .Values.prometheusExporter.resources }}
       {{- end }}
       volumes:
       - name: home-directories
