--- a/helm/jupyterhub-home-nfs/values.yaml
+++ b/helm/jupyterhub-home-nfs/values.yaml
@@ -5,12 +5,7 @@ nfsServer:
   image:
     repository: ghcr.io/2i2c-org/nfs-ganesha
     tag: 0.0.7
-  cpu:
-    request:
-    limit:
-  memory:
-    request:
-    limit:
+  resources: {}
 
 # Quota enforcer configuration
 # This container enforces the quota on the home directories
@@ -22,12 +17,7 @@ quotaEnforcer:
   path: "/export"
   # quota in GB
   hardQuota: "10"
-  cpu:
-    request:
-    limit:
-  memory:
-    request:
-    limit:
+  resources: {}
 
 # Prometheus exporter configuration
 # We export disk usage metrics using the Prometheus node exporter
@@ -37,12 +27,7 @@ prometheusExporter:
   image:
     repository: quay.io/prometheus/node-exporter
     tag: v1.8.2
-  cpu:
-    request:
-    limit:
-  memory:
-    request:
-    limit:
+  resources: {}
 
 # Persistent volume configuration
 
