--- a/helm/jupyterhub-home-nfs/values.yaml
+++ b/helm/jupyterhub-home-nfs/values.yaml
@@ -18,6 +18,7 @@ quotaEnforcer:
   # quota in GB
   hardQuota: "10"
   resources: {}
+  exclude: []
 
 # Prometheus exporter configuration
 # We export disk usage metrics using the Prometheus node exporter
