--- a/get-quota-your-home/docker-compose.yml
+++ b/get-quota-your-home/docker-compose.yml
@@ -8,3 +8,16 @@ services:
     volumes:
       - .:/app
     command: /usr/local/bin/start.sh
+
+  test:
+    profiles: ["test"]  # This service will only run when explicitly requested
+    build:
+      context: .
+      dockerfile: Dockerfile
+      target: dev  # Specify the development stage
+    privileged: true
+    volumes:
+      - .:/app
+    command: sh -c "/usr/local/bin/mount-xfs.sh && python3 -m pytest /app/tests.py"
+    environment:
+      - PYTHONPATH=/app
