--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -34,8 +34,7 @@ repos:
     rev: v4.0.0-alpha.8
     hooks:
       - id: prettier
-        # Don't run prettier on our jinja2 template files. We run djlint instead
-        exclude: "kubespawner/templates/.*\\.html"
+        exclude: "helm/.*\\.ya?ml$"
 
   # Misc...
   - repo: https://github.com/pre-commit/pre-commit-hooks
