--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,3 +52,6 @@ search = 'version: {current_version}'
 [[tool.tbump.file]]
 src = "helm/jupyterhub-home-nfs/Chart.yaml"
 search = 'appVersion: {current_version}'
+
+[tool.isort]
+profile = "black"
