Use yaml based config with traitlets
... inspired by https://github.com/2i2c-org/binderhub-service/blob/main/binderhub-service/mounted-files/binderhub_config.py

--- a/helm/jupyterhub-home-nfs/templates/deployment.yaml
+++ b/helm/jupyterhub-home-nfs/templates/deployment.yaml
@@ -25,10 +25,8 @@ spec:
         prometheus.io/scrape: "true"
         prometheus.io/port: "9100"
         {{- end }}
-        {{- if .Values.quotaEnforcer.config_file }}
         # checksum of the config file to trigger a deployment when the config changes
-        checksum/config: {{ .Values.quotaEnforcer.config_file | sha256sum }}
-        {{- end }}
+        checksum/mounted-secret: {{ include (print .Template.BasePath "/secret.yaml") . | sha256sum }}
     spec:
       containers:
       - name: nfs-server
@@ -48,26 +46,14 @@ spec:
         resources: {{ toJson .Values.nfsServer.resources }}
       - name: enforce-xfs-quota
         image: "{{ .Values.quotaEnforcer.image.repository }}:{{ .Values.quotaEnforcer.image.tag }}"
-        {{- if .Values.quotaEnforcer.config_file }}
-        command: ["python", "-m", "jupyterhub_home_nfs.generate", "--config-file", "/etc/jupyterhub-home-nfs/quota-enforcer-config.py"]
-        {{- else }}
-        command: ["python", "-m", "jupyterhub_home_nfs.generate",
-          "--paths", "{{ .Values.quotaEnforcer.path }}", 
-          "--hard-quota", "{{ .Values.quotaEnforcer.hardQuota }}"
-        {{- range .Values.quotaEnforcer.exclude }}
-        , "--exclude", {{ . | quote }}
-        {{- end }}
-        ]
-        {{- end }}
+        command: ["python", "-m", "jupyterhub_home_nfs.generate", "--config-file", "/etc/jupyterhub-home-nfs/mounted-secret/quota-enforcer-config.py"]
         securityContext:
           privileged: true
         volumeMounts:
         - name: home-directories
           mountPath: /export
-        {{- if .Values.quotaEnforcer.config_file }}
         - name: quota-enforcer-config
-          mountPath: /etc/jupyterhub-home-nfs
-        {{- end }}
+          mountPath: /etc/jupyterhub-home-nfs/mounted-secret
         resources: {{ toJson .Values.quotaEnforcer.resources }}
       {{- if .Values.prometheusExporter.enabled }}
       - name: metrics-exporter
@@ -92,8 +78,6 @@ spec:
       - name: home-directories
         persistentVolumeClaim:
           claimName: {{ .Release.Name }}-nfs-home-directories-claim
-      {{- if .Values.quotaEnforcer.config_file }}
       - name: quota-enforcer-config
-        configMap:
-          name: {{ .Release.Name }}-quota-enforcer-config
-      {{- end }}
+        secret:
+          secretName: {{ .Release.Name }}-secret
