--- a/helm/jupyterhub-home-nfs/values.yaml
+++ b/helm/jupyterhub-home-nfs/values.yaml
@@ -59,9 +59,13 @@ prometheusExporter:
 # Persistent volume configuration
 
 persistentVolume:
-  # The size should match the pre-provisioned disk size
+  # Setting this to 1M to make it obvious that this is not the real size.
+  # The value can be changed to the actual size of the pre-provisioned disk to correctly
+  # label the PV and PVC with the underlying disk size.
+  # Not setting this to the actual size of the pre-provisioned disk doesn't affect the
+  # functionality of the chart; only the labels on the PV and PVC will be incorrect.
   # The pre-provisioned disk ID is specified below in the cloud provider specific configuration
-  size: 10Gi
+  size: 1M
   storageClass: ""
   accessModes:
     - ReadWriteOnce
