Allow for more configurations to the deployment
Allow configuring annotations, node selector, node affinity, tolerations through helm values

--- a/helm/jupyterhub-home-nfs/values.yaml
+++ b/helm/jupyterhub-home-nfs/values.yaml
@@ -75,6 +75,18 @@ persistentVolume:
 service:
   type: ClusterIP
 
+# Annotations for the deployment
+annotations: {}
+
+# Node selector for the deployment
+nodeSelector: {}
+
+# Affinity for the deployment
+affinity: {}
+
+# Tolerations for the deployment
+tolerations: []
+
 # Cloud provider specific configurations
 eks:
   enabled: false
