--- a/example/nfs-client.yaml
+++ b/example/nfs-client.yaml
@@ -1,21 +1,58 @@
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: test-nfs-client-pv
+spec:
+  capacity:
+    storage: 1Mi
+  accessModes:
+    - ReadWriteMany
+  nfs:
+    server: nfs-service.nfs-test.svc.cluster.local
+    # server: 10.100.66.17
+    path: /
+  mountOptions:
+    - rsize=1048576
+    - wsize=1048576
+    - timeo=600
+    - soft
+    - retrans=2
+    - noresvport
+
+---
+
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: test-nfs-client-pvc
+  namespace: nfs-test
+spec:
+  accessModes:
+    - ReadWriteMany
+  volumeName: test-nfs-client-pv
+  storageClassName: ""
+  resources:
+    requests:
+      storage: 1Mi
+
+---
+
 kind: Pod
 apiVersion: v1
 metadata:
-  name: nfs-client
+  name: test-nfs-client
   namespace: nfs-test
 spec:
   containers:
-    - name: busybox
-      image: busybox
-      command:
-        - sleep
-        - "3600"
-      volumeMounts:
-        - name: data
-          mountPath: /data
-          subPath: alice
-  volumes:
+  - name: busybox
+    image: busybox
+    command:
+    - sleep
+    - "3600"
+    volumeMounts:
     - name: data
-      nfs:
-        server: "nfs-service.nfs-test.svc.cluster.local"
-        path: "/"
+      mountPath: /data
+  volumes:
+  - name: data
+    persistentVolumeClaim:
+      claimName: test-nfs-client-pvc
