--- a/helm/jupyterhub-home-nfs/templates/deployment.yaml
+++ b/helm/jupyterhub-home-nfs/templates/deployment.yaml
@@ -26,6 +26,7 @@ spec:
         prometheus.io/port: "9100"
         {{- end }}
         # checksum of the config file to trigger a deployment when the config changes
+        checksum/ganesha-config: {{ include (print .Template.BasePath "/configmap.yaml") . | sha256sum }}
         checksum/mounted-secret: {{ include (print .Template.BasePath "/secret.yaml") . | sha256sum }}
         {{- with .Values.annotations }}
           {{- toYaml . | nindent 8 }}
@@ -46,6 +47,9 @@ spec:
         volumeMounts:
         - name: home-directories
           mountPath: /export
+        - name: ganesha-config
+          mountPath: /etc/ganesha/ganesha.conf
+          subPath: ganesha.conf
         resources: {{ toJson .Values.nfsServer.resources }}
       {{- if .Values.quotaEnforcer.enabled }}
       - name: enforce-xfs-quota
@@ -83,6 +87,9 @@ spec:
       - name: home-directories
         persistentVolumeClaim:
           claimName: {{ .Release.Name }}-nfs-home-directories-claim
+      - name: ganesha-config
+        configMap:
+          name: {{ .Release.Name }}-ganesha-config
       - name: quota-enforcer-config
         secret:
           secretName: {{ .Release.Name }}-secret
