--- a/.github/workflows/build-publish-docker-helm.yaml
+++ b/.github/workflows/build-publish-docker-helm.yaml
@@ -5,6 +5,14 @@ on:
   push:
     branches:
       - main
+    paths-ignore:
+      - "LICENSE"
+      - "README.md"
+      - "RELEASE.md"
+      - ".pre-commit-config.yaml"
+      - ".github/**"
+      - ".gitignore"
+
     tags:
       - "**"
 
