--- a/helm/jupyterhub-home-nfs/templates/persistent-volume.yaml
+++ b/helm/jupyterhub-home-nfs/templates/persistent-volume.yaml
@@ -3,6 +3,11 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: {{ .Release.Name }}-nfs-home-directories-volume
+  {{- if .Values.persistentVolume.addStandardLabels }}
+  labels:
+    {{- include "jupyterhub-home-nfs.labels" . | nindent 4 }}
+    app.kubernetes.io/component: storage
+  {{- end }}
 spec:
   capacity:
     storage: {{ .Values.persistentVolume.size }}
