--- a/helm/jupyterhub-home-nfs/templates/secret.yaml
+++ b/helm/jupyterhub-home-nfs/templates/secret.yaml
@@ -6,6 +6,8 @@ kind: Secret
 apiVersion: v1
 metadata:
   name: {{ .Release.Name }}-secret
+  labels:
+    {{- include "jupyterhub-home-nfs.labels" . | nindent 4 }}
 type: Opaque
 stringData:
   {{- /*
