--- a/helm/jupyterhub-home-nfs/templates/service.yaml
+++ b/helm/jupyterhub-home-nfs/templates/service.yaml
@@ -2,6 +2,9 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ .Release.Name }}-nfs-service
+  labels:
+    {{- include "jupyterhub-home-nfs.labels" . | nindent 4 }}
+    app.kubernetes.io/component: nfs-server
 spec:
   type: {{ .Values.service.type }}
   ports:
