--- a/helm/jupyterhub-home-nfs/values.yaml
+++ b/helm/jupyterhub-home-nfs/values.yaml
@@ -60,6 +60,11 @@ prometheusExporter:
 # Persistent volume configuration
 
 persistentVolume:
+  # WARNING: Adding labels to existing PersistentVolumes may fail during upgrades
+  # as PVs are largely immutable. Only enable this for new installations or if you
+  # understand the risks. PersistentVolumeClaims receive standard labels by default
+  # as they are more tolerant of updates.
+  addStandardLabels: false
   # Setting this to 1M to make it obvious that this is not the real size.
   # The value can be changed to the actual size of the pre-provisioned disk to correctly
   # label the PV and PVC with the underlying disk size.
