Implement predictable resource naming for Helm chart
  Adds configurable resource naming to address service discovery challenges.
  By default maintains backward compatibility with existing release-name pattern.
  When usePredictableNames=true, uses fullnameOverride for consistent naming
  across deployments (e.g., home-nfs-nfs-service.namespace.svc.cluster.local).

  Changes:
  - Add usePredictableNames flag and comprehensive documentation to values.yaml
  - Create jupyterhub-home-nfs.resourceName helper template in _helpers.tpl
  - Update all resource templates to use the new naming helper
  - Update NOTES.txt to reflect dynamic service name

--- a/helm/jupyterhub-home-nfs/templates/deployment.yaml
+++ b/helm/jupyterhub-home-nfs/templates/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ .Release.Name }}-nfs-deployment
+  name: {{ include "jupyterhub-home-nfs.resourceName" . }}-nfs-deployment
   labels:
     {{- include "jupyterhub-home-nfs.labels" . | nindent 4 }}
     app.kubernetes.io/component: nfs-server
@@ -87,10 +87,10 @@ spec:
       volumes:
       - name: home-directories
         persistentVolumeClaim:
-          claimName: {{ .Release.Name }}-nfs-home-directories-claim
+          claimName: {{ include "jupyterhub-home-nfs.resourceName" . }}-nfs-home-directories-claim
       - name: quota-enforcer-config
         secret:
-          secretName: {{ .Release.Name }}-secret
+          secretName: {{ include "jupyterhub-home-nfs.resourceName" . }}-secret
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
