--- a/helm/jupyterhub-home-nfs/templates/secret.yaml
+++ b/helm/jupyterhub-home-nfs/templates/secret.yaml
@@ -5,7 +5,7 @@
 kind: Secret
 apiVersion: v1
 metadata:
-  name: {{ .Release.Name }}-secret
+  name: {{ include "jupyterhub-home-nfs.resourceName" . }}-secret
   labels:
     {{- include "jupyterhub-home-nfs.labels" . | nindent 4 }}
 type: Opaque
