--- a/helm/jupyterhub-home-nfs/templates/service.yaml
+++ b/helm/jupyterhub-home-nfs/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "jupyterhub-home-nfs.resourceName" . }}-nfs-service
+  name: {{ include "jupyterhub-home-nfs.serviceName" . }}
   labels:
     {{- include "jupyterhub-home-nfs.labels" . | nindent 4 }}
     app.kubernetes.io/component: nfs-server
