Implement quota overrides for specific folders
implements a quota override feature that allows setting custom quotas
for specific folders -- useful for setting separate quotas for
shared folders.

adds a new `quota_overrides` configuration option that allows
mapping folder names to custom quota values in GB.

--- a/helm/jupyterhub-home-nfs/values.yaml
+++ b/helm/jupyterhub-home-nfs/values.yaml
@@ -32,6 +32,7 @@ quotaEnforcer:
       wait_time: 30
       min_projid: 1000
       exclude: []
+      quota_overrides: {}
 
   # The keys and values below are rendered by a k8s Secret and mounted as a .py
   # file together with quota-enforcer-config.py. These are then executed by the
