--- a/helm/jupyterhub-home-nfs/templates/persistent-volume-claim.yaml
+++ b/helm/jupyterhub-home-nfs/templates/persistent-volume-claim.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: {{ include "jupyterhub-home-nfs.resourceName" . }}-nfs-home-directories-claim
+  name: {{ include "jupyterhub-home-nfs.home-nfs.fullname" . }}
   labels:
     {{- include "jupyterhub-home-nfs.labels" . | nindent 4 }}
     app.kubernetes.io/component: storage
@@ -14,5 +14,5 @@ spec:
       storage: {{ .Values.persistentVolume.size }}
   storageClassName: ""
   {{- if or .Values.eks.enabled .Values.gke.enabled .Values.openstack.enabled}}
-  volumeName: {{ .Release.Name }}-nfs-home-directories-volume
+  volumeName: {{ include "jupyterhub-home-nfs.home-nfs.fullname" . }}
   {{- end }}
