--- a/helm/jupyterhub-home-nfs/templates/persistent-volume.yaml
+++ b/helm/jupyterhub-home-nfs/templates/persistent-volume.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: {{ include "jupyterhub-home-nfs.resourceName" . }}-nfs-home-directories-volume
+  name: {{ include "jupyterhub-home-nfs.home-nfs.fullname" . }}
   {{- if .Values.persistentVolume.addStandardLabels }}
   labels:
     {{- include "jupyterhub-home-nfs.labels" . | nindent 4 }}
