--- a/helm/jupyterhub-home-nfs/values.yaml
+++ b/helm/jupyterhub-home-nfs/values.yaml
@@ -1,22 +1,14 @@
-# By default, this chart uses legacy naming patterns ({{ .Release.Name }}-suffix)
-# for backward compatibility with existing installations.
-#          
-# For new installations that want predictable resource names, set:
-#   usePredictableNames: true
-#   fullnameOverride: "home-nfs"  # Creates resources like "home-nfs-service"
+# Resource naming follows the z2jh pattern:
+# - When fullnameOverride is a string (including ""), use it as the base name and append "home-nfs"
+# - When fullnameOverride is not set, combine Release.Name with chart name
 #
-# This allows for consistent service discovery across deployments:
-#   home-nfs-service.namespace.svc.cluster.local
-#
-# Note: The service gets a clean "-service" suffix in predictable mode,
-# avoiding the legacy "-nfs-service" to prevent redundant naming.
-#
-# WARNING: Enabling usePredictableNames on existing installations will create
-# new resources with different names, potentially causing data loss or service
-# disruption. Only use for fresh installations. 
+# Examples:
+#   fullnameOverride: ""                          -> resources named "home-nfs"
+#   fullnameOverride: "myjupyterhub"              -> resources named "myjupyterhub-home-nfs"
+#   (no fullnameOverride)                         -> resources named "{{ .Release.Name }}-home-nfs"
+#   (no fullnameOverride, nameOverride: "custom") -> resources named "{{ .Release.Name }}-custom-home-nfs"
 nameOverride: ""
 fullnameOverride: ""
-usePredictableNames: false
 
 # NFS Ganesha configuration
 # NFS Ganesha is the user space NFS server that we use to serve the home directories
